--- a/game.project
+++ b/game.project
@@ -1,5 +1,6 @@
 [bootstrap]
 main_collection = /example/example.collectionc
+render = /example/example.renderc
 
 [script]
 shared_state = 1
@@ -9,8 +10,16 @@ width = 960
 height = 640
 
 [project]
-title = myextension
+title = geomextension
+developer = David Lannan
+publisher = Kakutai Pty Ltd
+bundle_resources = 
+custom_resources = example/assets
 
 [library]
 include_dirs = myextension
+
+[render]
+clear_color_red = 1.0
+clear_color_alpha = 1.0
 
